--- a/zzyl-generator/src/main/resources/vm/java/mapper.java.vm
+++ b/zzyl-generator/src/main/resources/vm/java/mapper.java.vm
@@ -1,5 +1,7 @@
 package ${packageName}.mapper;
 
+import com.baomidou.mybatisplus.core.mapper.BaseMapper;
+import org.apache.ibatis.annotations.Mapper;
 import java.util.List;
 import ${packageName}.domain.${ClassName};
 #if($table.sub)
@@ -12,6 +14,7 @@ import ${packageName}.domain.${subClassName};
  * @author ${author}
  * @date ${datetime}
  */
+
 public interface ${ClassName}Mapper 
 {
     /**
