--- a/zzyl-generator/src/main/resources/vm/java/domain.java.vm
+++ b/zzyl-generator/src/main/resources/vm/java/domain.java.vm
@@ -3,11 +3,13 @@ package ${packageName}.domain;
 #foreach ($import in $importList)
 import ${import};
 #end
-import lombok.Data;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
 import lombok.AllArgsConstructor;
+import lombok.Data;
 import lombok.NoArgsConstructor;
-import org.apache.commons.lang3.builder.ToStringBuilder;
-import org.apache.commons.lang3.builder.ToStringStyle;
+##import org.apache.commons.lang3.builder.ToStringBuilder;
+##import org.apache.commons.lang3.builder.ToStringStyle;
 import com.zzyl.common.annotation.Excel;
 #if($table.crud || $table.sub)
 import com.zzyl.common.core.domain.BaseEntity;
@@ -29,6 +31,7 @@ import com.zzyl.common.core.domain.TreeEntity;
         @Data
         @NoArgsConstructor
         @AllArgsConstructor
+        @ApiModel("${functionName}实体")
         public class ${ClassName} extends ${Entity}
         {
         private static final long serialVersionUID = 1L;
@@ -45,20 +48,67 @@ import com.zzyl.common.core.domain.TreeEntity;
                 #end
                 #if($parentheseIndex != -1)
                 @Excel(name = "${comment}", readConverterExp = "$column.readConverterExp()")
-                #elseif($column.javaType == 'Date')
-                @JsonFormat(pattern = "yyyy-MM-dd")
+                #elseif($column.javaType == 'Date' || $column.javaType == "LocalDateTime")
+                @JsonFormat(pattern = "yyyy-MM-dd" HH:mm:ss)
                 @Excel(name = "${comment}", width = 30, dateFormat = "yyyy-MM-dd")
                 #else
                 @Excel(name = "${comment}")
                 #end
             #end
+        @ApiModelProperty("${column.columnComment}")
         private $column.javaType $column.javaField;
 
         #end
     #end
-    #if($table.sub)
-            /** $table.subTable.functionName信息 */
-            private List<${subClassName}> ${subclassName}List;
-
-    #end
+    ###if($table.sub)
+    ##    /** $table.subTable.functionName信息 */
+    ##    private List<${subClassName}> ${subclassName}List;
+    ##
+    ###end
+    ###foreach ($column in $columns)
+    ###if(!$table.isSuperColumn($column.javaField))
+    ###if($column.javaField.length() > 2 && $column.javaField.substring(1,2).matches("[A-Z]"))
+    ###set($AttrName=$column.javaField)
+    ###else
+    ###set($AttrName=$column.javaField.substring(0,1).toUpperCase() + ${column.javaField.substring(1)})
+    ###end
+    ##    public void set${AttrName}($column.javaType $column.javaField)
+    ##    {
+    ##        this.$column.javaField = $column.javaField;
+    ##    }
+    ##
+    ##    public $column.javaType get${AttrName}()
+    ##    {
+    ##        return $column.javaField;
+    ##    }
+    ###end
+    ###end
+    ###if($table.sub)
+    ##    public List<${subClassName}> get${subClassName}List()
+    ##    {
+    ##        return ${subclassName}List;
+    ##    }
+    ##
+    ##    public void set${subClassName}List(List<${subClassName}> ${subclassName}List)
+    ##    {
+    ##        this.${subclassName}List = ${subclassName}List;
+    ##    }
+    ##
+    ###end
+    ##    @Override
+    ##    public String toString() {
+    ##        return new ToStringBuilder(this,ToStringStyle.MULTI_LINE_STYLE)
+    ###foreach ($column in $columns)
+    ###if($column.javaField.length() > 2 && $column.javaField.substring(1,2).matches("[A-Z]"))
+    ###set($AttrName=$column.javaField)
+    ###else
+    ###set($AttrName=$column.javaField.substring(0,1).toUpperCase() + ${column.javaField.substring(1)})
+    ###end
+    ##            .append("${column.javaField}", get${AttrName}())
+    ###end
+    ###if($table.sub)
+    ##            .append("${subclassName}List", get${subClassName}List())
+    ###end
+    ##            .toString();
+    ##    }
         }
